# k8s-msa-keiba

./: README.md
deploy/: redis.yaml  supervisor.yaml  worker-odds.yaml  worker-prediction.yaml  worker-race-data.yaml
deploy/components/: statestore.yaml
supervisor/: .dockerignore  Dockerfile  README.md  graph.py  main.py  pyproject.toml
workers/odds/: Dockerfile  README.md  main.py  pyproject.toml
workers/prediction/: Dockerfile  README.md  main.py  pyproject.toml
workers/race-data/: Dockerfile  README.md  main.py  pyproject.toml
