[project]
name = "supervisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dapr>=1.16.0",
    "fastapi[standard]>=0.124.0",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
